<resources>
    <string name="app_name">ShaarPro</string>
    <string name="SamaneShaar">جامع ترین سامانه آگهی املاک سنندج</string>
    <string name="AddHome">افزودن ملک</string>
    <string name="SearchHome">جستجوی ملک</string>
    <string name="NewsHome">جدید ترین املاک</string>
    <string name="Next">بعدی</string>
    <string name="NotAccount_AddAccount">حساب کاربری نداری؟ همین حالا ثبت نام کن</string>
    <string name="AddAccount">حساب کاربری جدید ایجاد کن</string>
    <string name="NewAccount">حساب کاربری جدید</string>
    <string name="Name_Family">نام و نام خانوادگی</string>
    <string name="Email">ایمیل(اختیاری)</string>
    <string name="Register">ثبت نام</string>
    <string name="MyHome">املاک من</string>
    <string name="PublishedHome">منتشر شده</string>
    <string name="WaitHome">انتظار تایید</string>
    <string name="ArchiveHome">آرشیو املاک</string>
    <string name="EditMoshaverin">تنظیمات مشاورین</string>
    <string name="Images">تصاویر</string>
    <string name="EditProfile">ویرایش پروفایل</string>
    <string name="SaveEdit">ذخیره تغییرات</string>
    <string name="EditLocationUser">تغییر موقعیت کاربر</string>
    <string name="CheckConnectionInternet">اتصال خود رابه اینترنت چک نمایید</string>
    <string name="Reload">بارگذاری مجدد</string>
    <string name="Resend">ارسال مجدد</string>
    <string name="Confirmation">تایید</string>
    <string name="Verification_Code">کد تایید</string>
    <string name="Disregard">صرف نظر</string>
    <string name="Exit">خروج</string>
    <string name="Password">رمز عبور</string>
    <string name="Login">ورود</string>
    <string name="Manegment_User">مدیریت اعضا</string>
    <string name="Confirm_Home">املاک تایید شده</string>
    <string name="Arshive_Home">آرشیو املاک</string>
    <string name="MyLocationHome">املاک محدوده من</string>
    <string name="WaitConfirm">املاک در انتظار تایید</string>
    <string name="NotFoundData">هیچ داده ای یافت نشد</string>
    <string name="NotDataToDataBase">در پایگاه داده هیچ داده ای وجود ندارد</string>
    <string name="Replace">جایگزین</string>
    <string name="Wait">صبر کنید</string>
    <string name="ResaultSearch">نتایج جستجو</string>
    <string name="Special">جیاواز</string>
    <string name="EditHome">ویرایش منزل</string>
    <string name="Target">هدف</string>
    <string name="Sell">فروش</string>
    <string name="Rent">اجاره</string>
    <string name="KindOfHome">نوع ملک</string>
    <string name="Residential">مسکونی</string>
    <string name="Commercial">تجاری</string>
    <string name="Industrial">صنعتی</string>
    <string name="Location">موقعیت</string>
    <string name="TempLocation">موقعیت مکانی</string>
    <string name="Property_details">جزییات ملک</string>
    <string name="AdTitle">عنوان آگهی</string>
    <string name="DiscriptionHome">توضیحات ملک</string>
    <string name="CodePosty">کدپستی</string>
    <string name="Address">آدرس</string>
    <string name="Price">قیمت (تومان)</string>
    <string name="Price2">قیمت</string>
    <string name="Rent_Price">اجاره (تومان)</string>
    <string name="Mortgage">رهن (تومان)</string>
    <string name="TheArea">متراژ</string>
    <string name="Year_of_construction">سال ساخت</string>
    <string name="CountRoom">تعداد اتاق</string>
    <string name="DiscriptionCall">جزییات تماس</string>
    <string name="Mobile">موبایل</string>
    <string name="Phone">تلفن</string>
    <string name="AddVideo">اضافه کردن ویدیو</string>
    <string name="VideoLink">لینک ویدیو</string>
    <string name="Property">ویژگی ها</string>
    <string name="Added_Property">ویژگی ها را اضافه کنید</string>
    <string name="HaveImage">دارای عکس</string>
    <string name="SpecificationsUser">مشخصات نویسنده: </string>
    <string name="Save">ثبت</string>
    <string name="Clear">پاک کن</string>
    <string name="AddProperty">ویژگی ها را اضافه کنید</string>
    <string name="Possibilities">امکانات</string>
    <string name="View">منظره</string>
    <string name="Balcony">بالکن</string>
    <string name="lobby">لابی</string>
    <string name="Double_glazed_window">پنجره دو جداره</string>
    <string name="Central_air_conditioning_system">سیسنم تهویه هوای مرکزی</string>
    <string name="Central_Motor_Home">موتور خانه مرکزی</string>
    <string name="Electricity">حیاط</string>
    <string name="Shooting">شوتینگ</string>
    <string name="Floor">طبقه</string>
    <string name="Number_of_building_floors">تعداد طبقات ساختمان</string>
    <string name="Floor_of_the_floor">جنس کف</string>
    <string name="Elevator">آسانسور</string>
    <string name="Other_key_features">دیگر ویژگی های کلیدی</string>
    <string name="Document_and_ownership">سند و مالکیت</string>
    <string name="Commercial_Appliances">لوازم تجاری</string>
    <string name="Toilet_number">تعداد پارکینگ</string>
    <string name="Parking">پارکینگ</string>
    <string name="Total_number_of_classes">تعداد کل طبقات</string>
    <string name="Wall_of_the_wall">جنس دیوار</string>
    <string name="heating_system">سیستم گرمایشی</string>
    <string name="kitchen">آشپزخانه</string>
    <string name="Facade">نما</string>
    <string name="Cabinets">کابینت</string>
    <string name="Height">ارتفاع</string>
    <string name="Property_location">موقعیت ملک</string>
    <string name="Service">سرویس</string>
    <string name="Gas">گاز</string>
    <string name="Water">آب</string>
    <string name="Remote_door">درب ریموت</string>
    <string name="IPhone_video">آیفون تصویری</string>
    <string name="sauna">سونا</string>
    <string name="Rebuilding">بازسازی</string>
    <string name="busy">پرتردد</string>
    <string name="Endowments">اوقافی</string>
    <string name="Nice_board">تابلو خور خوب</string>
    <string name="On">بر</string>
    <string name="Pass">گذر</string>
    <string name="Flood">قواره</string>
    <string name="Alleyway">گذر کوچه</string>
    <string name="Your_daddy">دونبش</string>
    <string name="Have_a_license_to_build">دارای جواز ساخت</string>
    <string name="Has_a_map_command">دارای دستور نقشه</string>
    <string name="Number_of_units">تعداد واحد</string>
    <string name="Size_of_land">متراژ زمین</string>
    <string name="Subscriber_Number">تعداد واحد زیرتجاری</string>
    <string name="Rooms">اتاق ها</string>
    <string name="Prayer_room">نماز خانه</string>
    <string name="Laundry">خشکشویی</string>
    <string name="Guard">نگهبان</string>
    <string name="Warehouse">انباری</string>
    <string name="Reading_room">سالن مطالعه</string>
    <string name="Commerce_and_communications">تجارت و ارتباطات</string>
    <string name="high_speed_Internet">اینترنت پر سرعت</string>
    <string name="Conference_room">اتاق کنفرانس</string>
    <string name="ATM">دستگاه خودپرداز در ساختمان</string>
    <string name="Health_centers">مراکز درمانی و بهداشتی</string>
    <string name="Barbecue">باربیکیو</string>
    <string name="Healthcare_center">مرکز ارایه خدمات درمانی</string>
    <string name="sport_Club">باشگاه ورزشی</string>
    <string name="Swimming_pool">استخر</string>
    <string name="Nearby_Neighborhoods">محله های نزدیک</string>
    <string name="Schools_close_to_the_place">مدارس نزدیک به ملک</string>
    <string name="Hospitals_close_to_the_property">بیمارستان های نزدیک به ملک</string>
    <string name="Shopping_centers_close_to_the_property">مراکز خرید نزدیک به ملک</string>
    <string name="Distance_from_airport">فاصله از فرودگاه</string>
    <string name="Public_transportation_close_to_the_property">وسایل حمل و نقل عمومی نزدیک به ملک</string>
    <string name="Other_important_centers_near_the_property">مراکز مهم دیگر در نزدیکی ملک</string>
    <string name="Other_features">دیگر امکانات</string>
    <string name="janitor">نظافت چی</string>
    <string name="Coffee_Shop">کافی شاپ</string>
    <string name="Designed_to_fit_low_income_people">طراحی متناسب با افراد کم توان</string>
    <string name="Electricity_and_emergency_water">برق و اب اضطراری</string>
    <string name="Sleep_master">خواب مستر</string>
    <string name="Massage_salon">سالن ماساژ</string>
    <string name="Turkish_bath">حمام ترکی</string>
    <string name="Roof_garden">روف گاردن</string>
    <string name="Altar">آلاچیق</string>
    <string name="Fountain">آب نما</string>
    <string name="Fireplace">آتشکده</string>
    <string name="Internal_Communication">ارتباط داخلی</string>
    <string name="chiller">چیلر</string>
    <string name="Fruit_garden">باغ میوه</string>
    <string name="Catering">کیترینگ</string>
    <string name="Parking_Distance">ریموت پارکینگ</string>
    <string name="Yard">حیاط</string>
    <string name="Conference_Hall">سالن اجتماعات</string>
    <string name="Security_System">سیستم امنیتی</string>
    <string name="Emergency_Exit">خروجی اضطراری</string>
    <string name="Automatic_Fire_Extinguishing_System">سیستم اطفا حریق خودکار</string>
    <string name="Fire_Hose">شیلنگ آتش نشانی</string>
    <string name="Fire_Extinguishing">اطفاء حریق</string>
    <string name="Internal_Security_System">سیتم امنیتی داخلی</string>
    <string name="TwentyFour_hour_Security">سیتم امنیتی داخلی</string>
    <string name="CCTV">دوربین مداربسته</string>
    <string name="Amazing">فوق العاده</string>
    <string name="Wiring_UPS">سیم کشی ups</string>
    <string name="security_24_hour">نگهبانی 24 ساعته</string>
    <string name="Done">انجام شد</string>
    <string name="Call">تماس</string>
    <string name="Edit">ویرایش</string>
    <string name="Record">ثبت</string>
    <string name="remove">حذف</string>
    <string name="NewLocation">لوکیشن جدید</string>
    <string name="Add">افزودن</string>
    <string name="Search">جستجو</string>
    <string name="SearchById">جستجو بر اساس شماره شناسایی</string>
    <string name="Record_Changes">ثبت تغییرات</string>
    <string name="Release">انتشار</string>
    <string name="Arshive">آرشیو</string>
    <string name="Expectation">انتظار</string>
    <string name="TourVisitor">تور مجازی</string>
    <string name="Select">انتخاب</string>
    <string name="Cancel">صرف نظر</string>
    <string name="title_choose_file">تور مجازی خود را نتخاب کنید</string>

    <string-array name="ListVideoApp">
        <item>آپارات</item>
        <item>تماشا</item>
    </string-array>
</resources>
