<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:background="@drawable/sms_panel_screen_background">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorCenteral">

        <RelativeLayout
            android:id="@+id/backall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/back"
                android:text="@string/Disregard"
                android:textSize="16sp"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorWhite"/>
        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_centerVertical="true">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColorHint="@color/colorWhite"
            android:theme="@style/StyleTextInputLayout">

            <EditText
                android:id="@+id/txt_Code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/stroke_edit_text_white"
                android:hint="@string/Verification_Code"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:inputType="number"
                android:textSize="18sp"
                android:gravity="left"
                android:textDirection="ltr"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/Discription"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="14sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/btn_Done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Confirmation"
            android:background="@drawable/change_color_btn"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/txtTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/btn_Resend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Resend"
            android:background="@drawable/change_color_btn"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

</RelativeLayout>