<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/loginscreenbackground"
    android:layoutDirection="ltr">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">

                <ImageView
                    android:id="@+id/close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_close"
                    android:padding="5dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/logo_shaar" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/stroke_edit_text_white"
                    android:editable="false"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="+۹۸"
                    android:textAppearance="?android:attr/textAppearanceInverse"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/txt_Mob"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:background="@drawable/stroke_edit_text_centeral_color"
                    android:gravity="right"
                    android:hint="شماره موبایل خود را وارد نمایید"
                    android:inputType="number"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textSize="16sp"
                    android:textAppearance="?android:attr/textAppearanceInverse"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textDirection="ltr"/>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorWhite"
                android:layout_marginTop="30dp"
                android:theme="@style/StyleTextInputLayout"
                app:passwordToggleEnabled="true"
                android:layoutDirection="ltr"
                app:passwordToggleTint="@color/colorWhite">

                <EditText
                    android:id="@+id/txt_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Password"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:gravity="left"
                    android:padding="0dp"
                    android:background="@drawable/stroke_edit_text_white"
                    android:inputType="textPassword"
                    android:singleLine="true"/>


            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_Register"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/change_color_btn"
                android:text="@string/Login"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/NotAccount_AddAccount"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

            <RelativeLayout
                android:id="@+id/NewAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/stroke_relative_white"
                android:gravity="center"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AddAccount"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>